--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <h1>Welcome to the AI Poem Generator</h1>
+
+    <footer>
+      This product was coded by Kate Lemass and is
+      <a href="https://github.com/katel-web/poem-generator">
+        open sourced on GitHub</a
+      >
+      and is <a href="https://poem-generater.netlify.app/">hosted on Netlify</a>
+    </footer>
   </body>
   <script src="src/index.js"></script>
 </html>
