Added basic HTML structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <h1>Welcome to the AI Poem Generator</h1>
+    <h1>AI Poem Generator</h1>
+    <main>
+      <form action="">
+        <input
+          type="text"
+          placeholder="Enter the topic of the poem"
+          required
+          autofocus
+        />
+        <input type="submit" />
+      </form>
+
+      <div>
+        Poem line 1
+        <br />
+        Poem line 2
+      </div>
+    </main>
 
     <footer>
       This product was coded by Kate Lemass and is
