--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@
 
       <footer>
         This product was coded by
-        <a href="https://github.com/katel-web"> Kate Lemass</a> and is
-        <a href="https://github.com/katel-web/poem-generator">
+        <a href="https://github.com/katel-web" target="_blank"> Kate Lemass</a>
+        and is
+        <a href="https://github.com/katel-web/poem-generator" target="_blank">
           open-sourced on GitHub</a
         >
         and is
-        <a href="https://poem-generater.netlify.app/">hosted on Netlify</a>
+        <a href="https://poem-generater.netlify.app/" target="_blank"
+          >hosted on Netlify</a
+        >
       </footer>
     </div>
   </body>
