--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Poem Generator</title>
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
   </head>
   <body>
     <div class="container">
@@ -12,7 +13,7 @@
         <h1>AI Poem Generator</h1>
       </header>
       <main>
-        <form action="">
+        <form action="" id="poem-generator-form">
           <input
             type="text"
             placeholder="Enter the topic of the poem"
@@ -23,7 +24,7 @@
           <input type="submit" class="submit-button" />
         </form>
 
-        <div class="poem">
+        <div class="poem" id="poem-box">
           Poem line 1
           <br />
           Poem line 2
