--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Poem Generator</title>
     <link rel="stylesheet" href="src/style.css" />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -20,15 +21,12 @@
             required
             autofocus
             class="input-form"
+            id="user-input"
           />
           <input type="submit" class="submit-button" />
         </form>
 
-        <div class="poem" id="poem-box">
-          Poem line 1
-          <br />
-          Poem line 2
-        </div>
+        <div class="poem" id="poem-box"></div>
       </main>
 
       <footer>
